tests/e2e/negative/n0002_undefined_variable.cryo
// @test: undefined_variable
// @expect: compile_fail
// @mode: raw
// @error_code: E0607
// @description: Using undefined variable should fail
// @tags: variables, errors

namespace NegUndefVar;

function main() -> int {
    return x;
}
